// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recreate-smooch-apps everything is successful Recreate the apps successfully 1`] = `undefined`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": undefined,
      "scope": "account",
      "secret": undefined,
      "serviceUrl": "mock-amooch-api-url",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to docClient.delete() 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "id": "5",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "1",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "6",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "2",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "7",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "3",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "4",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to docClient.put() 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "created": "January 1 1970",
        "created-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "id": "1",
        "name": "Test 1",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
        "type": "app",
        "updated": "January 1 1970",
        "updated-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "webhook-id": "5e31c81640a22c000f5d7c70",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "created": "January 1 1970",
        "created-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "id": "2",
        "name": "Test 2",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
        "type": "app",
        "updated": "January 1 1970",
        "updated-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "webhook-id": "5e31c81640a22c000f5d7c70",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "created": "January 1 1970",
        "created-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "id": "3",
        "name": "Test 3",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
        "type": "app",
        "updated": "January 1 1970",
        "updated-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "webhook-id": "5e31c81640a22c000f5d7c70",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "created": "January 1 1970",
        "created-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "id": "4",
        "name": "Test 4",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
        "type": "app",
        "updated": "January 1 1970",
        "updated-by": "7a436cd0-1126-11ea-9dea-25d8fc8b2383",
        "webhook-id": "5e31c81640a22c000f5d7c70",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to docClient.scan() 1`] = `
Array [
  Array [
    Object {
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to docClient.update() 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "id": "5",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "1",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "6",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "2",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "7",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "3",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "4",
        "tenant-id": "ae3a8d5a-8ece-4308-8812-63639cda3a22",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to secretClient.getSecretValue() 1`] = `
Array [
  Object {
    "SecretId": "us-east-1-dev-smooch-account",
  },
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to secretClient.putSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":\\"5e31c81640a22c000f5d7f29\\",\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":\\"secret\\",\\"2-id\\":1,\\"2-id-old\\":1,\\"2-secret-old\\":1,\\"2-secret\\":1,\\"3-id\\":2,\\"3-id-old\\":2,\\"3-secret-old\\":2,\\"3-secret\\":2,\\"4-id\\":3,\\"4-id-old\\":3,\\"4-secret-old\\":3,\\"4-secret\\":3}",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":0,\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":0,\\"2-id\\":\\"5e31c81640a22c000f5d7f29\\",\\"2-id-old\\":1,\\"2-secret-old\\":1,\\"2-secret\\":\\"secret\\",\\"3-id\\":2,\\"3-id-old\\":2,\\"3-secret-old\\":2,\\"3-secret\\":2,\\"4-id\\":3,\\"4-id-old\\":3,\\"4-secret-old\\":3,\\"4-secret\\":3}",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":0,\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":0,\\"3-id\\":2,\\"3-id-old\\":2,\\"3-secret-old\\":2,\\"3-secret\\":2,\\"4-id\\":3,\\"4-id-old\\":3,\\"4-secret-old\\":3,\\"4-secret\\":3}",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":0,\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":0,\\"2-id\\":1,\\"2-id-old\\":1,\\"2-secret-old\\":1,\\"2-secret\\":1,\\"3-id\\":\\"5e31c81640a22c000f5d7f29\\",\\"3-id-old\\":2,\\"3-secret-old\\":2,\\"3-secret\\":\\"secret\\",\\"4-id\\":3,\\"4-id-old\\":3,\\"4-secret-old\\":3,\\"4-secret\\":3}",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":0,\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":0,\\"2-id\\":1,\\"2-id-old\\":1,\\"2-secret-old\\":1,\\"2-secret\\":1,\\"4-id\\":3,\\"4-id-old\\":3,\\"4-secret-old\\":3,\\"4-secret\\":3}",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":0,\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":0,\\"2-id\\":1,\\"2-id-old\\":1,\\"2-secret-old\\":1,\\"2-secret\\":1,\\"3-id\\":2,\\"3-id-old\\":2,\\"3-secret-old\\":2,\\"3-secret\\":2,\\"4-id\\":\\"5e31c81640a22c000f5d7f29\\",\\"4-id-old\\":3,\\"4-secret-old\\":3,\\"4-secret\\":\\"secret\\"}",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
      "SecretString": "{\\"1-id\\":0,\\"1-id-old\\":0,\\"1-secret-old\\":0,\\"1-secret\\":0,\\"2-id\\":1,\\"2-id-old\\":1,\\"2-secret-old\\":1,\\"2-secret\\":1,\\"3-id\\":2,\\"3-id-old\\":2,\\"3-secret-old\\":2,\\"3-secret\\":2}",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to secretsClient.getSecretValue() 1`] = `
Array [
  Object {
    "SecretId": "us-east-1-dev-smooch-app",
  },
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to smooch.apps.create() 1`] = `
Array [
  Array [
    Object {
      "_id": "1",
      "name": "Test 1",
      "settings": Object {
        "conversationRetentionSeconds": 15000,
        "echoPostback": false,
        "maskCreditCardNumbers": true,
        "useAnimalNames": false,
      },
    },
  ],
  Array [
    Object {
      "_id": "2",
      "name": "Test 2",
      "settings": Object {
        "conversationRetentionSeconds": 15000,
        "echoPostback": false,
        "maskCreditCardNumbers": true,
        "useAnimalNames": false,
      },
    },
  ],
  Array [
    Object {
      "_id": "3",
      "name": "Test 3",
      "settings": Object {
        "conversationRetentionSeconds": 15000,
        "echoPostback": false,
        "maskCreditCardNumbers": true,
        "useAnimalNames": false,
      },
    },
  ],
  Array [
    Object {
      "_id": "4",
      "name": "Test 4",
      "settings": Object {
        "conversationRetentionSeconds": 15000,
        "echoPostback": false,
        "maskCreditCardNumbers": true,
        "useAnimalNames": false,
      },
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to smooch.apps.get() 1`] = `
Array [
  Array [
    "1",
  ],
  Array [
    "2",
  ],
  Array [
    "3",
  ],
  Array [
    "4",
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to smooch.apps.keys.create() 1`] = `
Array [
  Array [
    "1",
    "1",
  ],
  Array [
    "2",
    "2",
  ],
  Array [
    "3",
    "3",
  ],
  Array [
    "4",
    "4",
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to smooch.integrations.create() 1`] = `
Array [
  Array [
    "1",
    Object {
      "_id": undefined,
      "actionColor": "0099ff",
      "brandColor": "65758e",
      "conversationColor": "0099ff",
      "displayName": "Web Messenger",
      "displayStyle": "button",
      "integrationOrder": Array [],
      "prechatCapture": Object {
        "enabled": true,
        "fields": Array [
          Object {
            "label": "Email",
            "maxSize": 128,
            "minSize": 1,
            "name": "email",
            "placeholder": "",
            "type": "email",
          },
        ],
      },
      "status": "active",
      "type": "web",
    },
  ],
  Array [
    "2",
    Object {
      "_id": undefined,
      "actionColor": "0099ff",
      "brandColor": "65758e",
      "conversationColor": "0099ff",
      "displayName": "Web Messenger",
      "displayStyle": "button",
      "integrationOrder": Array [],
      "prechatCapture": Object {
        "enabled": true,
        "fields": Array [
          Object {
            "label": "Email",
            "maxSize": 128,
            "minSize": 1,
            "name": "email",
            "placeholder": "",
            "type": "email",
          },
        ],
      },
      "status": "active",
      "type": "web",
    },
  ],
  Array [
    "3",
    Object {
      "_id": undefined,
      "actionColor": "0099ff",
      "brandColor": "65758e",
      "conversationColor": "0099ff",
      "displayName": "Web Messenger",
      "displayStyle": "button",
      "integrationOrder": Array [],
      "prechatCapture": Object {
        "enabled": true,
        "fields": Array [
          Object {
            "label": "Email",
            "maxSize": 128,
            "minSize": 1,
            "name": "email",
            "placeholder": "",
            "type": "email",
          },
        ],
      },
      "status": "active",
      "type": "web",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to smooch.integrations.get() 1`] = `
Array [
  Array [
    Object {
      "appId": "1",
      "integrationId": "5",
    },
  ],
  Array [
    Object {
      "appId": "2",
      "integrationId": "6",
    },
  ],
  Array [
    Object {
      "appId": "3",
      "integrationId": "7",
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful walkthrough passes in the correct arguments to smooch.webhooks.create() 1`] = `
Array [
  Array [
    "1",
    Object {
      "includeClient": true,
      "target": "https://us-east-1-dev-smooch-gateway.domain/webhook?tenantId=ae3a8d5a-8ece-4308-8812-63639cda3a22",
      "triggers": Array [
        "message:appUser",
        "conversation:read",
        "typing:appUser",
      ],
    },
  ],
  Array [
    "2",
    Object {
      "includeClient": true,
      "target": "https://us-east-1-dev-smooch-gateway.domain/webhook?tenantId=ae3a8d5a-8ece-4308-8812-63639cda3a22",
      "triggers": Array [
        "message:appUser",
        "conversation:read",
        "typing:appUser",
      ],
    },
  ],
  Array [
    "3",
    Object {
      "includeClient": true,
      "target": "https://us-east-1-dev-smooch-gateway.domain/webhook?tenantId=ae3a8d5a-8ece-4308-8812-63639cda3a22",
      "triggers": Array [
        "message:appUser",
        "conversation:read",
        "typing:appUser",
      ],
    },
  ],
  Array [
    "4",
    Object {
      "includeClient": true,
      "target": "https://us-east-1-dev-smooch-gateway.domain/webhook?tenantId=ae3a8d5a-8ece-4308-8812-63639cda3a22",
      "triggers": Array [
        "message:appUser",
        "conversation:read",
        "typing:appUser",
      ],
    },
  ],
]
`;

exports[`recreate-smooch-apps everything is successful when secret-old and secret is not provided 1`] = `undefined`;

exports[`recreate-smooch-apps throws an error when there is a problem creating Smooch integration 1`] = `"An Error has occurred creating an integration"`;

exports[`recreate-smooch-apps throws an error when there is a problem creating Smooch integration from DynamoDB 1`] = `"An Error has occurred creating an integration from DynamoDB"`;

exports[`recreate-smooch-apps throws an error when there is a problem creating smooch app 1`] = `"An Error has occurred trying to create an App"`;

exports[`recreate-smooch-apps throws an error when there is a problem creating smooch app keys 1`] = `"An Error has occurred trying to create App credentials"`;

exports[`recreate-smooch-apps throws an error when there is a problem creating webhook 1`] = `"Error creating webhook"`;

exports[`recreate-smooch-apps throws an error when there is a problem deleting Smooch integration 1`] = `"An Error has occurred deleting an integration"`;

exports[`recreate-smooch-apps throws an error when there is a problem deleting Smooch integration from DynamoDB 1`] = `"An Error has occurred deleting an integration from DynamoDB"`;

exports[`recreate-smooch-apps throws an error when there is a problem put app credentials (2) 1`] = `"Error retrieving app credentials (2)"`;

exports[`recreate-smooch-apps throws an error when there is a problem putting credentials 1`] = `"Error retrieving putting credentials"`;

exports[`recreate-smooch-apps throws an error when there is a problem putting data to db 1`] = `"Error creating app into DynamoDB"`;

exports[`recreate-smooch-apps throws an error when there is a problem retrieving Smooch app 1`] = `"An Error has occurred retrieving an App"`;

exports[`recreate-smooch-apps throws an error when there is a problem retrieving Smooch integration 1`] = `"An Error has occurred retrieving an integration"`;

exports[`recreate-smooch-apps throws an error when there is a problem retrieving account credentials (1) 1`] = `"Error retrieving account credentials"`;

exports[`recreate-smooch-apps throws an error when there is a problem retrieving app credentials (2) 1`] = `"Error retrieving app credentials"`;

exports[`recreate-smooch-apps throws an error when there is a problem scanning data from DB 1`] = `"An Error has occurred trying to fetch apps in DynamoDB"`;
